# haqdar_ai

./: .env.example  .gitignore  CLAUDE.md  README.md  haqdar-ai-499713-595c09d7a539.json  pyproject.toml  render.yaml  requirements.txt  test_backend_rag.py
app/: main.py
app/api/v1/: routes.py
app/core/: ai_client.py  citation_verifier.py  config.py  embeddings.py  pgvector_store.py  vector_store.py
app/knowledge/: pakistan_laws.py  prompts.py
app/resilience/: demo_cache.py
app/schemas/: complaint.py  rights.py
app/scripts/: seed_reports.py
app/services/: analysis_service.py  missing_info.py  pdf_service.py  report_store.py  retrieval_service.py  rights_service.py  whatsapp_bot.py
